--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,16 +4,11 @@ on:
     branches:
       - main
 jobs:
-  publish:
-    name: Teste
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-      - uses: expo/expo-github-actions@v6
-        with:
-          expo-version: 4.x
-      - run: yarn
-      - run: yarn jest
+    - uses: actions/checkout@v2
+    - name: Install modules
+      run: yarn
+    - name: Run tests
+      run: yarn test
