--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,3 +12,22 @@ jobs:
       run: yarn
     - name: Run tests
       run: yarn test tests
+  evaluator_job:
+    runs-on: ubuntu-18.04
+    name: Evaluator job
+    needs: eslint
+    steps:
+      - uses: actions/checkout@v2
+      - name: Jest evaluator step
+        id: jest
+        uses: betrybe/jest-evaluator-action@v7
+        with:
+          repository-test-name: 'betrybe/sd-0x-project-jest-tests'
+          repository-test-branch: 'improve/describes'
+
+      - name: Store evaluation step
+        uses: betrybe/store-evaluation-action@v2
+        with:
+          evaluation-data: ${{ steps.jest.outputs.result }}
+          environment: production
+          pr-number: ${{ github.event.number }}
